@@ -3,7 +3,9 @@ package org.twelve.presentacion;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.web.servlet.ModelAndView;
-import org.twelve.dominio.*;
+import org.twelve.dominio.ListaColaborativaService;
+import org.twelve.dominio.MovieService;
+import org.twelve.dominio.UsuarioService;
 import org.twelve.dominio.entities.ListaMovie;
 import org.twelve.presentacion.dto.ListaColaborativaDTO;
 import org.twelve.presentacion.dto.MovieDTO;
@@ -11,16 +13,13 @@ import org.twelve.presentacion.dto.PerfilDTO;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
-
 import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 public class ListaColaborativaControllerTest {
 
@@ -39,7 +38,6 @@ public class ListaColaborativaControllerTest {
         usuarioService = mock(UsuarioService.class);
         listaColaborativaService = mock(ListaColaborativaService.class);
         listaColaborativaController = new ListaColaborativaController(usuarioService, listaColaborativaService, movieService);
-
     }
 
     @Test
@@ -137,8 +135,8 @@ public class ListaColaborativaControllerTest {
 
     @Test
     public void testMostrarFormularioAgregarPeliculaSinListasNiPeliculas() {
-        when(listaColaborativaService.obtenerTodasLasListasColaborativas()).thenReturn(Arrays.asList());
-        when(movieService.getAll()).thenReturn(Arrays.asList());
+        when(listaColaborativaService.obtenerTodasLasListasColaborativas()).thenReturn(List.of());
+        when(movieService.getAll()).thenReturn(List.of());
 
         ModelAndView modelAndView = listaColaborativaController.mostrarFormularioAgregarPelicula();
 
@@ -181,7 +179,7 @@ public class ListaColaborativaControllerTest {
 
         when(requestMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
-        when(listaColaborativaService.obtenerListasPorUsuario(usuarioLogueadoId)).thenReturn(Arrays.asList());
+        when(listaColaborativaService.obtenerListasPorUsuario(usuarioLogueadoId)).thenReturn(List.of());
 
         ModelAndView modelAndView = listaColaborativaController.mostrarListasUsuario(usuarioLogueadoId, requestMock);
 
@@ -191,29 +189,13 @@ public class ListaColaborativaControllerTest {
     }
 
     @Test
-    public void testMostrarDetalleListaConListaExistente() {
-        Integer listaId = 1;
-        ListaColaborativaDTO listaMock = mock(ListaColaborativaDTO.class);
-        List<ListaMovie> peliculasMock = Arrays.asList(mock(ListaMovie.class), mock(ListaMovie.class));
-
-        when(listaColaborativaService.obtenerDetalleLista(listaId)).thenReturn(listaMock);
-        when(listaColaborativaService.obtenerPeliculasPorListaId(listaId)).thenReturn(peliculasMock);
-
-        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId);
-
-        assertThat(modelAndView.getViewName(), is("detalleLista"));
-        assertNotNull(modelAndView.getModel().get("lista"));
-        assertNotNull(modelAndView.getModel().get("peliculas"));
-        assertThat(((List<ListaMovie>) modelAndView.getModel().get("peliculas")).size(), is(2));
-    }
-
-    @Test
     public void testMostrarDetalleListaConListaNoExistente() {
         Integer listaId = 1;
 
+        when(requestMock.getSession()).thenReturn(sessionMock);
         when(listaColaborativaService.obtenerDetalleLista(listaId)).thenReturn(null);
 
-        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId);
+        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId, requestMock);
 
         assertThat(modelAndView.getViewName(), is("error"));
         assertNotNull(modelAndView.getModel().get("error"));
@@ -221,20 +203,127 @@ public class ListaColaborativaControllerTest {
     }
 
     @Test
-    public void testMostrarDetalleListaConListaSinPeliculas() {
-        Integer listaId = 1;
-        ListaColaborativaDTO listaMock = mock(ListaColaborativaDTO.class);
+    public void testCrearListaColaborativaConNombreDuplicado() {
+        Integer usuarioLogueadoId = 1;
+        Integer usuarioColaboradorId = 2;
+        String nombreLista = "Lista Existente";
 
-        when(listaColaborativaService.obtenerDetalleLista(listaId)).thenReturn(listaMock);
-        when(listaColaborativaService.obtenerPeliculasPorListaId(listaId)).thenReturn(Arrays.asList());
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
+        when(usuarioService.sonAmigos(usuarioLogueadoId, usuarioColaboradorId)).thenReturn(true);
+        when(listaColaborativaService.crearListaColaborativa(usuarioLogueadoId, usuarioColaboradorId, nombreLista))
+                .thenThrow(new RuntimeException("Ya existe una lista con este nombre para el usuario."));
 
-        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId);
+        ModelAndView modelAndView = listaColaborativaController.crearListaColaborativa(requestMock, nombreLista, usuarioColaboradorId);
 
-        assertThat(modelAndView.getViewName(), is("detalleLista"));
-        assertNotNull(modelAndView.getModel().get("lista"));
-        assertNotNull(modelAndView.getModel().get("peliculas"));
-        assertTrue(((List<ListaMovie>) modelAndView.getModel().get("peliculas")).isEmpty());
+        assertThat(modelAndView.getViewName(), is("crearListaColaborativa"));
+        assertThat(modelAndView.getModel().get("error"), is("Ya existe una lista con este nombre para el usuario."));
+        assertNotNull(modelAndView.getModel().get("usuarios"));
     }
 
+    @Test
+    public void testCrearListaColaborativaConErrorGenerico() {
+        Integer usuarioLogueadoId = 1;
+        Integer usuarioColaboradorId = 2;
+        String nombreLista = "Nueva Lista";
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
+        when(usuarioService.sonAmigos(usuarioLogueadoId, usuarioColaboradorId)).thenReturn(true);
+        when(listaColaborativaService.crearListaColaborativa(usuarioLogueadoId, usuarioColaboradorId, nombreLista))
+                .thenThrow(new RuntimeException("Error inesperado"));
+
+        ModelAndView modelAndView = listaColaborativaController.crearListaColaborativa(requestMock, nombreLista, usuarioColaboradorId);
+
+        assertThat(modelAndView.getViewName(), is("crearListaColaborativa"));
+        assertThat(modelAndView.getModel().get("error"), is("Ocurrió un error al crear la lista. Intenta nuevamente."));
+        assertNotNull(modelAndView.getModel().get("usuarios"));
+    }
+
+    @Test
+    public void testCrearListaColaborativaExito() {
+        Integer usuarioLogueadoId = 1;
+        Integer usuarioColaboradorId = 2;
+        String nombreLista = "Lista Nueva";
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
+        when(usuarioService.sonAmigos(usuarioLogueadoId, usuarioColaboradorId)).thenReturn(true);
+
+        ModelAndView modelAndView = listaColaborativaController.crearListaColaborativa(requestMock, nombreLista, usuarioColaboradorId);
+
+        assertThat(modelAndView.getViewName(), is("redirect:/listas/" + usuarioLogueadoId));
+    }
+
+    @Test
+    public void testMostrarDetalleListaSinUsuarioLogueado() {
+        Integer listaId = 1;
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(null);
+
+        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId, requestMock);
+
+        assertThat(modelAndView.getViewName(), is("error"));
+    }
+
+    @Test
+    public void testMostrarDetalleListaConListaNoExistente2() {
+        Integer listaId = 1;
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(1);
+        when(listaColaborativaService.obtenerDetalleLista(listaId)).thenReturn(null);
+
+        ModelAndView modelAndView = listaColaborativaController.mostrarDetalleLista(listaId, requestMock);
+
+        assertThat(modelAndView.getViewName(), is("error"));
+        assertNotNull(modelAndView.getModel().get("error"));
+        assertThat(modelAndView.getModel().get("error"), is("La lista solicitada no existe."));
+    }
+
+    @Test
+    public void testEliminarListaConUsuarioLogueado() {
+        Integer usuarioLogueadoId = 1;
+        Integer listaId = 123;
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
+
+        doNothing().when(listaColaborativaService).eliminarListaColaborativa(listaId, usuarioLogueadoId);
+
+        ModelAndView modelAndView = listaColaborativaController.eliminarLista(listaId, requestMock);
+
+        assertThat(modelAndView.getViewName(), is("redirect:/listas/" + usuarioLogueadoId));
+    }
+
+    @Test
+    public void testEliminarListaSinUsuarioLogueado() {
+        Integer listaId = 123;
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(null);
+
+        ModelAndView modelAndView = listaColaborativaController.eliminarLista(listaId, requestMock);
+
+        assertThat(modelAndView.getViewName(), is("redirect:/login"));
+    }
+
+    @Test
+    public void testEliminarListaConErrorEnElServicio() {
+        Integer usuarioLogueadoId = 1;
+        Integer listaId = 123;
+
+        when(requestMock.getSession()).thenReturn(sessionMock);
+        when(sessionMock.getAttribute("usuarioId")).thenReturn(usuarioLogueadoId);
+
+        doThrow(new RuntimeException("Error eliminando la lista"))
+                .when(listaColaborativaService).eliminarListaColaborativa(listaId, usuarioLogueadoId);
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            listaColaborativaController.eliminarLista(listaId, requestMock);
+        });
+        assertThat(exception.getMessage(), is("Error eliminando la lista"));
+    }
 
 }
